# residualriskapp

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  README.md  TODO.md  TODO_k_distributions.md  app.py  docker-compose.yml  pyproject.toml  residualrisk.py  residualrisk_go.py  residualrisk_prep.py  run_tests.sh
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
.streamlit/: config.toml
docker/: BUILD-QUICK-START.md  CPU-PERFORMANCE.md  Caddyfile  Makefile  QUICKREF.md  README.md  TEST-PERFORMANCE.sh  build.sh  run.sh
docker/nginx/: nginx.conf
docker/nginx/conf.d/: app.conf
docs/: credits.md  theory.md
go/: .gitignore  Makefile  README.md  go.mod  main.go
go/riskdays/: helpers.go  hsm.go  integration.go  kde.go  kde_test.go  models.go  probability.go  random.go  riskdays.go  riskdays_test.go  version.go
pages/: 1_Documentation.py  2_Credits.py
residualrisk/: __init__.py  _go.py  core.py  prep.py
scripts/: build_go.sh  check_invgamma_iwp.py  run_tests.sh
static/: iwp_estimates_expdecay.parquet  k_param_animal.parquet  k_param_human.parquet
tests/: test_invgamma_parity.py  test_lnmix_parity.py  test_residualrisk.py  test_sim_df_correctness.py
