[project]
name = "residualrisk"
dynamic = ["version"]
description =  "Residual risk estimation tool"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "streamlit>=1.56.0",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "pyarrow>=24.0.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "plotly>=6.7.0",
    "watchdog>=6.0.0",
    "ipykernel>=7.2.0", # Not clear this is entirely necessary
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "residualrisk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["residualrisk"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
vulnerable_dependencies = [
    "tornado>=6.5.5",
]
