[project]
name = "residualrisk"
dynamic = ["version"]
description =  "Residual risk estimation tool"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "streamlit>=1.57.0",
    "polars>=1.40.1",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "plotly>=6.7.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "residualrisk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["residualrisk"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "ipykernel>=7.2.0",
]
